k8s-manifests/jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      dnsPolicy: "None"
      dnsConfig: 
        nameservers: 
          - 8.8.8.8
          - 1.1.1.1
        searches:
          - jenkins.svc.cluster.local
      serviceAccountName: jenkins-sa
      automountServiceAccountToken: true

      nodeSelector:
        role: jenkins

      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: true

      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-pvc
        - name: jcasc
          configMap:
            name: jenkins-jcasc
        - name: jenkins-secrets
          secret:
            secretName: jenkins-secrets
            defaultMode: 0400
        - name: run-dir
          emptyDir: {}

      containers:
        - name: jenkins
          image: kirillank04/jenkins:dos25-onl
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
            - name: jcasc
              mountPath: /var/jenkins_home/casc_configs
              readOnly: true
            - name: jenkins-secrets
              mountPath: /run/secrets
              readOnly: true
            - name: run-dir
              mountPath: /var/run

          securityContext:
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ "ALL" ]
        
        - name: webhookrelayd
          image: webhookrelay/webhookrelayd:latest
          imagePullPolicy: IfNotPresent
          command: ["/relayd"]
